--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.3.1
 certifi==2020.12.5
 chardet==4.0.0
+dj-database-url==0.5.0
 Django==3.1.7
 django-environ==0.4.5
+django-heroku==0.3.1
 django-widget-tweaks==1.4.8
+gunicorn==20.1.0
 idna==2.10
+psycopg2==2.8.6
 pytz==2021.1
 requests==2.25.1
 sqlparse==0.4.1
 urllib3==1.26.4
+whitenoise==5.2.0
